fixed review issues