@@ -10,20 +10,25 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
         private int count;
         private final Key[] keys;
         private final Value[] values;
-        private final List<Node> children = new ArrayList<>();
+        private final List<Node> children;
 
+        @SuppressWarnings("unchecked")
         public Node(int count) {
             this.count = count;
             keys = (Key[]) new Comparable[3];
             values = (Value[]) new Object[3];
+            children = new ArrayList<>(4);
+            for (int i = 0; i < 4; i++) {
+                children.add(null);
+            }
         }
 
         public boolean isLeaf() {
-            return children.getFirst() == null;
+            return children.get(0) == null;
         }
     }
 
-    public void TwoThreeST() {
+    public T3TwoThreeST() {
         root = null;
     }
 
@@ -32,18 +37,22 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
     }
 
     private Value get(Node node, Key key) {
-        if (node == null)
+        if (node == null) {
             return null;
-
-        for (int i = 0; i < node.count; i++) {
-            int cmp = key.compareTo(node.keys[i]);
-            if (cmp == 0)
-                return node.values[i];
-            else if (cmp < 0)
-                return get(node.children.get(i), key);
         }
 
-        return get(node.children.get(node.count), key);
+        int i = 0;
+        while (i < node.count && key.compareTo(node.keys[i]) > 0) {
+            i++;
+        }
+
+        if (i < node.count && key.compareTo(node.keys[i]) == 0) {
+            return node.values[i];
+        } else if (node.isLeaf()) {
+            return null;
+        } else {
+            return get(node.children.get(i), key);
+        }
     }
 
     public void put(Key key, Value value) {
@@ -53,7 +62,15 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
             newNode.values[0] = value;
             root = newNode;
         } else {
-            root = put(root, key, value);
+            Node newNode = put(root, key, value);
+            if (newNode != null) {
+                Node newRoot = new Node(1);
+                newRoot.keys[0] = newNode.keys[0];
+                newRoot.values[0] = newNode.values[0];
+                newRoot.children.set(0, root);
+                newRoot.children.set(1, newNode.children.get(1));
+                root = newRoot;
+            }
         }
     }
 
@@ -74,15 +91,15 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
                 i++;
             }
             Node newNode = put(node.children.get(i), key, value);
-            if (newNode != node.children.get(i)) {
-                int j = node.count - 1;
-                while (j >= i) {
-                    node.keys[j + 1] = node.keys[j];
-                    node.children.set(j + 2, node.children.get(j + 1));
-                    j--;
+            if (newNode != null) {
+                for (int j = node.count; j > i; j--) {
+                    node.keys[j] = node.keys[j - 1];
+                    node.values[j] = node.values[j - 1];
+                    node.children.set(j + 1, node.children.get(j));
                 }
                 node.keys[i] = newNode.keys[0];
-                node.children.set(i + 1, newNode);
+                node.values[i] = newNode.values[0];
+                node.children.set(i + 1, newNode.children.get(1));
                 node.count++;
             }
         }
@@ -90,7 +107,7 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
         if (node.count > 2) {
             return split(node);
         } else {
-            return node;
+            return null;
         }
     }
 
@@ -99,9 +116,19 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
         Node newChildNode = new Node(1);
         newNode.keys[0] = node.keys[1];
         newNode.values[0] = node.values[1];
-        node.count = 1;
         newNode.children.set(0, node);
         newNode.children.set(1, newChildNode);
+        newChildNode.keys[0] = node.keys[2];
+        newChildNode.values[0] = node.values[2];
+        newChildNode.children.set(0, node.children.get(2));
+        newChildNode.children.set(1, node.children.get(3));
+        node.count = 1;
+        node.keys[1] = null;
+        node.values[1] = null;
+        node.keys[2] = null;
+        node.values[2] = null;
+        node.children.set(2, null);
+        node.children.set(3, null);
         return newNode;
     }
 
@@ -114,6 +141,10 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
     }
 
     private Node delete(Node node, Key key) {
+        if (node == null) {
+            return null;
+        }
+
         if (node.isLeaf()) {
             int i = 0;
             while (i < node.count && key.compareTo(node.keys[i]) > 0) {
@@ -131,20 +162,11 @@ public class T3TwoThreeST<Key extends Comparable<Key>, Value> {
             while (i < node.count && key.compareTo(node.keys[i]) > 0) {
                 i++;
             }
-            Node child = delete(node.children.get(i), key);
-            if (child != node.children.get(i)) {
-                int j = i;
-                while (j < node.count - 1) {
-                    node.keys[j] = node.keys[j + 1];
-                    node.children.set(j + 1, node.children.get(j + 2));
-                    j++;
-                }
-                node.count--;
-            }
+            node.children.set(i, delete(node.children.get(i), key));
         }
 
         if (node.count == 0) {
-            node = node.children.getFirst();
+            node = node.children.get(0);
         }
 
         return node;
